@@ -1,4 +1,4 @@
-/*	$NetBSD: libpfkey.h,v 1.3.2.3 2005/11/21 21:12:30 tron Exp $	*/
+/*	$NetBSD: libpfkey.h,v 1.3.2.4 2005/12/07 18:18:47 tron Exp $	*/
 
 /* Id: libpfkey.h,v 1.8.2.3 2005/06/29 13:01:28 manubsd Exp */
 
@@ -46,6 +46,7 @@
 
 struct sadb_msg;
 extern void pfkey_sadump __P((struct sadb_msg *));
+extern void pfkey_sadump_withports __P((struct sadb_msg *));
 extern void pfkey_spdump __P((struct sadb_msg *));
 extern void pfkey_spdump_withports __P((struct sadb_msg *));
 
